Now saves user preference of min thresh and milli